--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="style.css">
 
 
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -64,7 +63,6 @@
   <!-- COMPLETE - NAV BAR -->
 
 
-
   <!-- GRID / PAGE LAYOUT -->
 
   <div class="container">
@@ -74,11 +72,21 @@
       <div class="col-md-8">
         <br>
         <h1> Summary: Latitude vs. X </h1> 
+          
+        <!-- <div class="clearfix">
+          <img src="Resources\assets\images\max_temp.png" 
+          class="col-md-8 float-md-end mb-4 ms-md-4" 
+          alt="Max Temperature Plot">
+          </div> -->
+
         <a target="_blank" href="Resources\assets\images\max_temp.png">
-        <img src="Resources\assets\images\max_temp.png" alt="Max Temperature Plot" class="img-thumbnail">
-        </a>        
-        <p>The purpose of this project was to analyse how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. <br>
-        After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs the latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualisations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.        
+          <img src="Resources\assets\images\max_temp.png" alt="Max Temperature Plot" >
+          </a>
+
+        <p>The purpose of this project was to analyse how weather changes as you get closer to the equator. <br> <br>
+        To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. <br> <br>
+        After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs the latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. <br> <br>
+        This site provides the source data and visualisations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed. <br> <br>        
     </div>
       <div class="col-md-4">
         <br>
@@ -113,7 +121,8 @@
 
     </div>
     </div>
-
+    
+    <!-- COMPLETE - GRID / PAGE LAYOUT -->
 
 </body>
 
