populating individual observations pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Latitude</a>
+        <a class="navbar-brand" href="index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,16 +45,16 @@
                 Plots
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Max Temperature</a></li>
-                <li><a class="dropdown-item" href="#">Humidity</a></li>
-                <li><a class="dropdown-item" href="#">Cloudiness</a></li>
-                <li><a class="dropdown-item" href="#">Wind Speed</a></li>
+                <li><a class="dropdown-item" href="maxtemp.html">Max Temperature</a></li>
+                <li><a class="dropdown-item" href="humidity.html">Humidity</a></li>
+                <li><a class="dropdown-item" href="cloudiness.html">Cloudiness</a></li>
+                <li><a class="dropdown-item" href="windspeed.html">Wind Speed</a></li>
               </ul>
             </li>
-              <a class="nav-link" href="#">Comparison</a>
+              <a class="nav-link" href="comparisons.html">Comparison</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Data</a>
+              <a class="nav-link" href="data.html">Data</a>
             </li>
           </ul>
         </div>
@@ -74,17 +74,17 @@
         <br>
         <h1> Summary: Latitude vs. X </h1> 
           
-        <!-- <div class="clearfix">
+        <div class="img-fluid">
           <img src="Resources\assets\images\max_temp.png" 
-          class="col-md-8 float-md-end mb-4 ms-md-4" 
+          class="col-md-8 float-md-end" 
           alt="Max Temperature Plot">
-          </div> -->
+          </div>
 
-        <a target="_blank" href="Resources\assets\images\max_temp.png">
+        <!-- <a target="_blank" href="Resources\assets\images\max_temp.png">
           <img src="Resources\assets\images\max_temp.png" alt="Max Temperature Plot" >
-          </a>
+          </a> -->
 
-        <p>The purpose of this project was to analyse how weather changes as you get closer to the equator. <br> <br>
+        <p> <br> The purpose of this project was to analyse how weather changes as you get closer to the equator. <br> <br>
         To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. <br> <br>
         After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs the latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. <br> <br>
         This site provides the source data and visualisations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed. <br> <br>        
@@ -94,31 +94,31 @@
         <h1> Visualizations </h1> 
         <br>
 
-        <div class="row">
-        <div class="col-md-4">
-          <a target="_blank" href="Resources\assets\images\max_temp.png">
-            <img src="Resources\assets\images\max_temp.png" alt="Max Temperature Plot" class="img-thumbnail">
-            </a>
-        </div>
-        <div class="col-md-4">
-          <a target="_blank" href="Resources\assets\images\wind_speed.png">
-            <img src="Resources\assets\images\wind_speed.png" alt="Max Temperature Plot" class="img-thumbnail">
-            </a>
-        </div>
-        </div>
+          <div class="row">
+          <div class="col-md-6">
+            <a target="_blank" href="Resources\assets\images\max_temp.png">
+              <img src="Resources\assets\images\max_temp.png" alt="Max Temperature Plot" class="img-thumbnail">
+              </a>
+          </div> <br>
+          <div class="col-md-6">
+            <a target="_blank" href="Resources\assets\images\wind_speed.png">
+              <img src="Resources\assets\images\wind_speed.png" alt="Max Temperature Plot" class="img-thumbnail">
+              </a>
+          </div>
+          </div> <br>
 
-        <div class="row">
-          <div class="col-md-4">
-            <a target="_blank" href="Resources\assets\images\humidity.png">
-              <img src="Resources\assets\images\humidity.png" alt="Max Temperature Plot" class="img-thumbnail">
-              </a>
+          <div class="row">
+            <div class="col-md-6">
+              <a target="_blank" href="Resources\assets\images\humidity.png">
+                <img src="Resources\assets\images\humidity.png" alt="Max Temperature Plot" class="img-thumbnail">
+                </a>
+            </div>
+            <div class="col-md-6">
+              <a target="_blank" href="Resources\assets\images\cloudiness.png">
+                <img src="Resources\assets\images\cloudiness.png" alt="Max Temperature Plot" class="img-thumbnail">
+                </a>
+            </div>
           </div>
-          <div class="col-md-4">
-            <a target="_blank" href="Resources\assets\images\cloudiness.png">
-              <img src="Resources\assets\images\cloudiness.png" alt="Max Temperature Plot" class="img-thumbnail">
-              </a>
-          </div>
-        </div>
 
     </div>
     </div>
