final touches to HTML files

--- a/maxtemp.html
+++ b/maxtemp.html
@@ -79,10 +79,10 @@
           <img src="Resources\assets\images\max_temp.png" alt="Max Temperature Plot" >
           </a> -->
 
-        <p> <br> The purpose of this project was to analyse how weather changes as you get closer to the equator. <br> <br>
-        To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. <br> <br>
-        After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs the latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. <br> <br>
-        This site provides the source data and visualisations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed. <br> <br>        
+        <p> <br> In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. It is also used to temporarily replace text in a process called greeking, which allows designers to consider the form of a webpage or publication, without the meaning of the text influencing the design.
+            Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero, with words altered, added, and removed to make it nonsensical and improper Latin.
+            Versions of the Lorem ipsum text have been used in typesetting at least since the 1960s, when it was popularized by advertisements for Letraset transfer sheets. Lorem ipsum was introduced to the digital world in the mid-1980s, when Aldus employed it in graphic and word-processing templates for its desktop publishing program PageMaker. Other popular word processors, including Pages and Microsoft Word, have since adopted Lorem ipsum, as have many LaTeX packages, web content managers such as Joomla! and WordPress, and CSS libraries such as Semantic UI.
+            <br>        
     </div>
       <div class="col-md-4">
         <br>
