--- a/comparisons.html
+++ b/comparisons.html
@@ -18,50 +18,45 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="bootstrap.css">
 
-
-  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
-
 </head>
 
 <body>
 
-  <!-- NAV BAR -->
-  <!-- Includes expand settings for small vs large screens -->
-  <!-- Small screens display a drop down box to display navigation options -->
-  <!-- Large screens display all navigation options individually along the nav bar -->
-    
+    <!-- NAV BAR -->
+    <!-- Includes expand settings for small vs large screens -->
+    <!-- Small screens display a drop down box to display navigation options -->
+    <!-- Large screens display all navigation options individually along the nav bar -->
+        
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Latitude</a>
+        <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Plots
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Max Temperature</a></li>
-                <li><a class="dropdown-item" href="#">Humidity</a></li>
-                <li><a class="dropdown-item" href="#">Cloudiness</a></li>
-                <li><a class="dropdown-item" href="#">Wind Speed</a></li>
-              </ul>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="maxtemp.html">Max Temperature</a></li>
+                <li><a class="dropdown-item" href="humidity.html">Humidity</a></li>
+                <li><a class="dropdown-item" href="cloudiness.html">Cloudiness</a></li>
+                <li><a class="dropdown-item" href="windspeed.html">Wind Speed</a></li>
+                </ul>
             </li>
-              <a class="nav-link" href="#">Comparison</a>
+                <a class="nav-link" href="comparisons.html">Comparison</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Data</a>
+                <a class="nav-link" href="data.html">Data</a>
             </li>
-          </ul>
+            </ul>
         </div>
-      </div>
+        </div>
     </nav>
 
-  <!-- COMPLETE - NAV BAR -->
+    <!-- COMPLETE - NAV BAR -->
 
 
   <!-- GRID / PAGE LAYOUT -->
